<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0  http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.ximera239</groupId>
    <artifactId>spray-api-parent</artifactId>
    <packaging>pom</packaging>
    <name>spray-api-parent</name>
    <version>0.0.1</version>

    <modules>
        <module>spray-api</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compile.encoding>UTF-8</maven.compile.encoding>
        <maven.test.compile.encoding>UTF-8</maven.test.compile.encoding>
        <maven.junit.jvmargs>-Dfile.encoding=UTF-8</maven.junit.jvmargs>

        <!--Version of local published snapshots-->
        <snapshot.version>1.0-SNAPSHOT</snapshot.version>

        <scala.version>2.10.4</scala.version>
        <scala.binary.version>2.10</scala.binary.version>

        <akka.version>2.3.7</akka.version>

        <spray.version>1.3.1</spray.version>

        <slf4j.version>1.7.6</slf4j.version>
        <logback-classic.version>1.1.2</logback-classic.version>

        <json.config>20131018</json.config>

        <junit.version>4.11</junit.version>
    </properties>

    <repositories>
        <repository>
            <id>Sonatype OSS Snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>Typesafe Releases</id>
            <url>http://repo.typesafe.com/typesafe/releases/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>Sonatype OSS Snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <!-- http://xflin.blogspot.ru/2013/08/mixed-scala-and-java-in-maven-project.html -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <executions>
                        <execution>
                            <id>default-compile</id>
                            <phase>none</phase>
                        </execution>
                        <execution>
                            <id>default-testCompile</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.16</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>1.3.1</version>
                    <executions>
                        <execution>
                            <id>enforce</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <!--<alwaysPass/>-->
                                    <dependencyConvergence/>
                                    <bannedDependencies>
                                        <excludes>
                                            <exclude>log4j:log4j</exclude>
                                            <exclude>org.slf4j:slf4j-log4j12</exclude>
                                        </excludes>
                                    </bannedDependencies>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.1.6</version>
                    <executions>
                        <execution>
                            <id>scala-compile</id>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>scala-test-compile</id>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <recompileMode>incremental</recompileMode>
                        <jvmArgs>
                            <jvmArg>-Xms640m</jvmArg>
                            <jvmArg>-Xmx2040m</jvmArg>
                            <jvmArg>-XX:MaxPermSize=524m</jvmArg>
                            <jvmArg>-XX:+CMSPermGenSweepingEnabled</jvmArg>
                            <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                        </jvmArgs>
                        <args>
                            <!--<arg>-target:jvm-1.6</arg>-->
                            <arg>-feature</arg>
                            <arg>-deprecation</arg>
                            <arg>-unchecked</arg>
                        </args>

                        <javacArgs>
                            <javacArg>-source</javacArg>
                            <javacArg>1.6</javacArg>
                            <javacArg>-target</javacArg>
                            <javacArg>1.6</javacArg>
                        </javacArgs>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
        </plugins>
    </build>



    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-compiler</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>


            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-actor_${scala.binary.version}</artifactId>
                <version>${akka.version}</version>
            </dependency>
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-slf4j_${scala.binary.version}</artifactId>
                <version>${akka.version}</version>
            </dependency>


            <dependency>
                <groupId>io.spray</groupId>
                <artifactId>spray-can</artifactId>
                <version>${spray.version}</version>
            </dependency>

            <dependency>
                <groupId>io.spray</groupId>
                <artifactId>spray-routing</artifactId>
                <version>${spray.version}</version>
            </dependency>

            <dependency>
                <groupId>io.spray</groupId>
                <artifactId>spray-httpx</artifactId>
                <version>${spray.version}</version>
            </dependency>


            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${json.config}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback-classic.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>log4j-over-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest_${scala.binary.version}</artifactId>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>